// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isSelected renders true when specified 1`] = `
<tr
  class="euiTableRow euiTableRow-isSelected"
>
  <td
    class="euiTableRowCell"
  >
    <div
      class="euiTableCellContent"
    >
      <span
        class="euiTableCellContent__text"
      />
    </div>
  </td>
</tr>
`;

exports[`renders EuiTableRow 1`] = `
<tr
  aria-label="aria-label"
  class="euiTableRow testClass1 testClass2"
  data-test-subj="test subject string"
>
  <td
    class="euiTableRowCell"
  >
    <div
      class="euiTableCellContent"
    >
      <span
        class="euiTableCellContent__text"
      >
        hi
      </span>
    </div>
  </td>
</tr>
`;
